# the-fly-story

./: CMakeLists.txt  README.md
include/: TerrainsManager.h
res/: BackLeftFemur.mesh  BackLeftShoe.mesh  BackLeftTibia.mesh  BackRightFemur.mesh  BackRightShoe.mesh  BackRightTibia.mesh  Boddy.mesh  Fly.material  FrontLeftFemur.mesh  FrontLeftShoe.mesh  FrontLeftTibia.mesh  FrontRightFemur.mesh  FrontRightShoe.mesh  FrontRightTibia.mesh  Head.mesh  LeftWing.mesh  MiddleLeftFemur.mesh  MiddleLeftShoe.mesh  MiddleLeftTibia.mesh  MiddleRightFemur.mesh  MiddleRightShoe.mesh  MiddleRightTibia.mesh  RightWing.mesh
src/: TerrainsManager.cpp  main.cpp
